[package]
name = "pi_animation"
version = "0.0.1"
authors = ["baip0002 <bai9253461@gmail.com>"]
edition = "2021"
description = "Animation Runtime Library"
repository = "https://github.com/GaiaWorld/pi_animation"
license = "MIT OR Apache-2.0"
keywords = ["pi", "animation", "target animation", "attribute animation"]

[dependencies]
pi_slotmap = "0.1"
pi_curves = { git = "https://github.com/GaiaWorld/pi_animation"}
log = "0.4"
env_logger = "0.9"

[patch."https://github.com/GaiaWorld/pi_curves"]
pi_curves = { path = "../pi_curves"}